--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "window.nostrdb.js",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "A indexeddb polyfill for NIP-DB (window.nostrdb)",
   "license": "MIT",
   "author": "hzrd149",
@@ -29,8 +29,8 @@
     "build": "bun run compile && bun run bundle"
   },
   "dependencies": {
-    "nostr-idb": "^2.4.0",
-    "nostr-tools": "^2.17.0"
+    "nostr-idb": "0.0.0-20251003110238",
+    "nostr-tools": "~2.17.0"
   },
   "devDependencies": {
     "@types/bun": "latest",
