--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "window.nostrdb.js",
-  "version": "0.2.3",
+  "version": "0.3.0",
   "description": "A indexeddb polyfill for NIP-DB (window.nostrdb)",
   "license": "MIT",
   "author": "hzrd149",
@@ -29,7 +29,10 @@
     "build": "bun run compile && bun run bundle"
   },
   "dependencies": {
-    "nostr-idb": "3",
+    "applesauce-extra": "0.0.0-next-20251009104432",
+    "applesauce-loaders": "^4.0.0",
+    "applesauce-signers": "^4.0.0",
+    "nostr-idb": "^3.0.0",
     "nostr-tools": "~2.17.0"
   },
   "devDependencies": {
@@ -37,6 +40,6 @@
     "prettier": "^3.6.2"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
