--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "window.nostrdb.js",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A indexeddb polyfill for NIP-DB (window.nostrdb)",
   "license": "MIT",
   "author": "hzrd149",
@@ -29,9 +29,9 @@
     "build": "bun run compile && bun run bundle"
   },
   "dependencies": {
-    "applesauce-extra": "next",
+    "applesauce-extra": "^4.1.0",
     "applesauce-loaders": "^4.0.0",
-    "applesauce-signers": "^4.0.0",
+    "applesauce-signers": "^4.1.0",
     "nostr-idb": "^3.0.0",
     "nostr-tools": "~2.17.0"
   },
