--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "window.nostrdb.js",
-  "version": "0.4.1",
+  "version": "0.4.2",
   "description": "A indexeddb polyfill for NIP-DB (window.nostrdb)",
   "license": "MIT",
   "author": "hzrd149",
@@ -33,13 +33,11 @@
     "applesauce-loaders": "^4.0.0",
     "applesauce-signers": "^4.1.0",
     "nostr-idb": "^3.0.0",
-    "nostr-tools": "~2.17.0"
+    "nostr-tools": "~2.17.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "prettier": "^3.6.2"
-  },
-  "peerDependencies": {
+    "prettier": "^3.6.2",
     "typescript": "^5.9.3"
   }
 }
