--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "window.nostrdb.js",
   "version": "0.4.2",
-  "description": "A indexeddb polyfill for NIP-DB (window.nostrdb)",
+  "description": "A local relay and indexeddb polyfill for NIP-DB (window.nostrdb)",
   "license": "MIT",
   "author": "hzrd149",
   "repository": {
@@ -24,16 +24,20 @@
     "dist"
   ],
   "scripts": {
-    "bundle": "bun build --production --target browser --outfile dist/window.nostrdb.js index.ts",
+    "bundle": "bun build --production --target browser --outfile dist/window.nostrdb.js src/index.ts",
     "compile": "tsc --noEmit false",
     "build": "bun run compile && bun run bundle"
   },
   "dependencies": {
+    "@contextvm/sdk": "^0.1.37",
+    "@modelcontextprotocol/sdk": "^1.21.0",
     "applesauce-extra": "^4.1.0",
-    "applesauce-loaders": "^4.0.0",
-    "applesauce-signers": "^4.1.0",
+    "applesauce-loaders": "^4.2.0",
+    "applesauce-relay": "^4.2.0",
+    "applesauce-signers": "^4.2.0",
     "nostr-idb": "^3.0.0",
-    "nostr-tools": "~2.17.1"
+    "nostr-tools": "~2.17.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@types/bun": "latest",
